<resources>
    <string name="app_name">SampleApplicationProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragmentCustomAccountList</string>
    <string name="home_page">Ana Sayfa</string>
    <string name="sample_application_project">Örnek Uygulama Projesi</string>
    <string name="form_screen">Form Ekranı</string>
    <string name="form_list_screen">Form Listesi Ekranı</string>
    <string name="enter_your_name">Adınızı Giriniz</string>
    <string name="enter_your_surname">Soyadınızı Giriniz</string>
    <string name="save">Kaydet</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="add">Ekle</string>
    <string name="pick_your_birthday">Doğum Günü Tarihinizi Seçiniz</string>
    <string name="your_birthday">Doğum Günü Tarihiniz</string>
    <string name="account_name">Hesap Adı</string>
    <string name="branch_name">Şube Adı</string>
    <string name="account_no">Hesap No</string>
    <string name="balance">Bakiye</string>
    <string name="account_name_double_dot">Hesap Adı:</string>
    <string name="branch_name_double_dot">Şube Adı:</string>
    <string name="account_no_double_dot">Hesap No:</string>
    <string name="balance_double_dot">Bakiye:</string>
    <string name="there_is_no_information">Bilgi yer almamaktadır</string>
    <string name="female">Kadın</string>
    <string name="male">Erkek</string>
    <string name="deposit_account">Vadeli Hesap</string>
    <string name="checking_account">Vadesiz Hesap</string>
    <string name="gold_account">Altın Hesap</string>
    <string name="currency_account">Döviz hesap</string>
    <string name="portfolio_account">Portföy Hesap</string>
    <string name="i_read_and_approve_the_contract">Sözleşmeyi okudum ve onaylıyorum</string>
    <string name="i_approve">Onaylıyorum</string>
    <string name="not_confirmed">Onaylamıyorum</string>
    <string name="name_and_surname">Ad ve soyad</string>
    <string name="surname_double_dot">Soyadınız</string>
    <string name="your_birthday_double_dot">Doğum günü tarihiniz</string>
    <string name="turn_back">Geri Dön</string>
    <string name="your_name_double_dot">Adınız</string>
    <string name="your_gender_double_dot">Cinsiyetiniz</string>
    <string name="your_phone_number_double_dot">Telefon Numaranız</string>
    <string name="your_account_selection_double_dot">Hesap seçiminiz</string>
    <string name="select_your_profile_photo_by_clicking_the_icon_below">Aşağıdaki ikona tıklayarak profil fotoğrafınızı seçiniz</string>
    <string name="select_the_account_you_want_to_trade_from_the_box_below">Aşağıdaki kutucuktan işlem yapmak istediğiniz hesabı seçiniz</string>
    <string name="enter_your_phone_number">Telefon Numaranızı Giriniz</string>
    <string name="select_your_gender">Cinsiyetinizi Seçiniz</string>
    <string name="select_account">Hesap Seçiniz</string>
    <string name="go_ahead">Devam et</string>
    <string name="your_photograph">Fotoğrafınız:</string>
    <string name="select_language" translatable="false">Dil Seçiniz</string>
    <string name="language">Dil</string>
    <string name="turkish" translatable="false">Türkçe</string>
    <string name="english" translatable="false">English</string>

    <string-array name="language_option">
        <item>English</item>
        <item>Turkish</item>
    </string-array>

</resources>