<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/unit8dp">

    <LinearLayout
        android:id="@+id/layoutLeftSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAccountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name_double_dot"
            android:textSize="@dimen/unit20sp" />

        <TextView
            android:id="@+id/textViewDepartmentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branch_name_double_dot"
            android:textSize="@dimen/unit20sp" />

        <TextView
            android:id="@+id/textViewAccountNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_no_double_dot"
            android:textSize="@dimen/unit20sp" />

        <TextView
            android:id="@+id/textViewBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_double_dot"
            android:textSize="@dimen/unit20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRightSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/unit8dp"
        android:layout_toEndOf="@+id/layoutLeftSide"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAccountNameRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/there_is_no_information"
            android:textSize="@dimen/unit20sp" />

        <TextView
            android:id="@+id/textViewDepartmentRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/there_is_no_information"
            android:textSize="@dimen/unit20sp" />

        <TextView
            android:id="@+id/textViewAccountNoRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/there_is_no_information"
            android:textSize="@dimen/unit20sp" />

        <TextView
            android:id="@+id/textViewBalanceRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/there_is_no_information"
            android:textSize="@dimen/unit20sp" />
    </LinearLayout>

</RelativeLayout>