<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.form.FragmentConfirmScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/unit16dp"
        android:paddingTop="@dimen/unit16dp"
        android:paddingRight="@dimen/unit16dp"
        android:paddingBottom="@dimen/unit16dp">

        <LinearLayout
            android:id="@+id/linearLayoutName"
            style="@style/InputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewConfirmName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/unit8dp"
                android:text="@string/your_name_double_dot"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewConfirmNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="Özge" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSurname"
            style="@style/InputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutName"
            android:layout_marginTop="@dimen/unit8dp">

            <TextView
                android:id="@+id/textViewConfirmSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/unit8dp"
                android:text="@string/surname_double_dot"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewConfirmSurnameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="CANLI" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutBirthday"
            style="@style/InputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutSurname"
            android:layout_marginTop="@dimen/unit8dp">

            <TextView
                android:id="@+id/textViewConfirmBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_birthday_double_dot"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewConfirmBirthdayEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="1.1.2022" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPhoto"
            style="@style/InputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutBirthday"
            android:layout_marginTop="@dimen/unit8dp">

            <TextView
                android:id="@+id/textViewConfirmPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_photograph"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageViewConfirmPhotoEdit"
                android:layout_width="@dimen/unit100dp"
                android:layout_height="@dimen/unit100dp"
                android:src="@drawable/ic_person" />

        </LinearLayout>

        <com.example.sampleapplicationproject.widgets.CustomAccountWidget
            android:id="@+id/CustomAccountViewConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutPhoto"
            android:layout_marginTop="@dimen/unit8dp"
            android:background="@drawable/bg_input_view" />

        <LinearLayout
            android:id="@+id/linearLayoutNumber"
            style="@style/InputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CustomAccountViewConfirm"
            android:layout_marginTop="@dimen/unit8dp">

            <TextView
                android:id="@+id/textViewConfirmPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/unit8dp"
                android:text="@string/your_phone_number_double_dot"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewConfirmPhoneNumberEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutGender"
            style="@style/InputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutNumber"
            android:layout_marginTop="@dimen/unit8dp">

            <TextView
                android:id="@+id/textViewConfirmGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/unit8dp"
                android:text="@string/your_gender_double_dot"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewConfirmGenderEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutAccount"
            style="@style/InputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutGender"
            android:layout_marginTop="@dimen/unit8dp">

            <TextView
                android:id="@+id/textViewConfirmAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/unit8dp"
                android:text="@string/your_account_selection_double_dot"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewConfirmAccountEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutAccount"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/unit8dp"
            android:text="@string/turn_back" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/unit8dp"
            android:text="Kaydet" />

    </RelativeLayout>

</ScrollView>